@@ -126,11 +126,12 @@ the key.
 
 AREAS=\
 Command : AREAS\n\r\
-Usage   : AREAS ([FILTER EXPRESSION]) (SORT=[SORTTYPE])\n\r\
+Usage   : AREAS ([FILTER EXPRESSION]) (SORT=[SORTTYPE]) (EXPLORED)\n\r\
 Example : areas\n\r\
 Example : areas $population > 10 or ($avg_level < 5 and $avg_level > 2)\n\r\
 Example : areas $med_alignment >= 7500\n\r\
 Example : areas $med_alignment >= 7500 sort=med_level\n\r\
+Example : areas explored\n\r\
 Short(s): \n\r\
 This command will list all the areas in the known world of the game. \n\r\
 \n\r\
@@ -144,7 +145,7 @@ $AVG_ALIGNMENT, $MED_ALIGNMENT, $TOTAL_LEVELS, $TOTAL_INTELLIGENT_LEVELS, \
 $VISITABLE_ROOMS\n\r\
 You can sort the list by the same variables that can be filtered, which will cause \
 the display to show the value of that stat alongside the area name. You can also \
-sort by REVERSE (name), LEVEL, and AUTHOR.\n\r\
+sort by REVERSE (name), LEVEL, and AUTHOR.  Adding EXPLORED shows the % exploration.\n\r\
 \n\r\
 You may also enter HELP [AREA NAME] to get more help on the areas \
 you see listed with this command.
